# awsbs

./: Cargo.toml  README.md  rustfmt.toml
examples/: auto.rs
src/: configs.rs  consts.rs  lib.rs  sign.rs
